# astarte-device-sdk-rust

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.lock.license  Cargo.toml  Dockerfile  README.md  REUSE.toml  _typos.toml  committed.toml  pyproject.toml  release-plz.toml  rust-toolchain.toml  sqlx-data.json
.github/: codecov.yaml  dependabot.yml
.github/workflows/: build-workflow.yaml  (+15 more)
.reuse/: dep5
.sqlx/: query-016ce69fa6a72fb6ef69c7c16b0ef607678f1865a4719c61f216e4c45c0f0820.json  query-029d1bf1055fc58cb60b2f466e04658c7f674a40b09bcee54411c9752c4d9855.json  query-03517c7c6dd3b629e6277557c256dc00730cf68d28a5424e05824e49a550fd4b.json  query-0791b986211f697635648ef4c15f6dd1d8e89d468b57836aa46fee2cd09f395e.json  query-0a19155fc3b741767a26fc2360cdf186b33dc55064eec3f4b21a2b3a6ea9739a.json  query-0bc76296f1368209ff77b634b4cd6fef23cc21863baf86474843120e8561728e.json  query-0ddfd70cbfd072306fa322fea4b2c3c3ab64f208c4391c34f5ee746035ec4d83.json  query-20c659bf1886c1ac058849c9d92cb26e8ab5f06911f0392dfeb46b4ecb1cd080.json  query-24684ce5267671b27573fff84833127dcfd28f6f4aba9febe514f2a3d2841767.json  query-24d2f965c82bd869c45084bea00fd81cc4d1dce3ca404256d67325c5208bd7dd.json  query-261dcce8534fd5de8115f64f8073cce2c073479042685da7239d0137fe6e5a09.json  query-29cd6033bd9263230502d3f070542a1338a41336c487e59d4a4ef57f9f2c6cf2.json  query-2a44c9ce9a94e93e8a0d3b0d8263d35c02500ee64328d78e79defbc2146cf977.json  query-3ec117a3dc01e70499d0b9e55873f3434581a03a47a2447be87222cbb3265321.json  query-488897a561ea6f92ad353d6877eba336ad0cfc91b4921661081d4b16a7b1ed85.json  query-51ab3b675365931132ed04bfcb0d8cf5055eafd7b2a4311d870c81408064c1cf.json  query-5c53a781263f71fd7aa603bbbd63d15316a3f916286577885a1a6d1eb3d790ed.json  query-7051e5059604c0c0116670ac0f6d9927122530bc54f2cd3b6f9987a58035955d.json  query-72ef2b07e49b25482fae84501b98ab5b1bbc66955a4557da719f7a5f58f4bc21.json  query-7611d7e407e548c276ec015435199d7bac06b2fca78d87d369a6d842820869aa.json  query-7adc10128126eee44c2633a1990bccef907b06ca2503ba95b703988d978fe75a.json  query-9393f823dbbf0f13eac681ca9ef150894fa66d9d0febe10969a4765b947d0f64.json  query-9721a616dc3371fb8e95767d9d2d6c959ba16caafa559aa54b38d5a10f13fea9.json  query-988e293ed8e16d50c21901df204aa8fd98ed03decf061852e96a5c07b222f1b2.json  query-a2a8e3398e382cf8301f5fe0e3cf5123bbac86e1d68f0cfaba30bd029ee82d57.json  query-ab597cffaeddfa879b43589d0c4450086ece23c9fbd51357fd7f814213258281.json  query-b0683f46caa65b044b00774816900ee7bcd7587bcc65171583c035355703ed81.json  query-bf783656b4bc7f02b3842a30d8b4d44355bed648a1d33c132e1cdd3a70836a94.json  query-bfbc2e75d7c94910fbc794229e6108b96849dc489ffa06698a01689e6fd6ebfc.json  query-c70b75503b248f69dfb0e0d1b31102ca115b1ecd1127d10245d05163e8df67ca.json  query-cb4298d2ba020f8168676b600aaf281c7c9509180c9a3923bcfbc48e10613d40.json  query-d351c27420b6ba3c437b36aeebd27422971f8b847ef2834e47152a01b17f2e87.json  query-da93a9fb157687e399c85f23537613928646e2871f20e7cff0d9429c2bcd87a4.json  query-e22a54f8ed769abd3a244616c9bb941adc807a6dd84213196b4d67979ddc9df8.json  query-e421df7da6ffd19c50c91cc4bc357797c512bf58b344b2a418acac08e20c0573.json  query-f8f9a2a028392ef53f7062aca8323fd293a220c102ad7f1b71337fa8541896a0.json  query-ff7b6dffda342f4c0cb1eed4a97a7b9f60867c1c4a6bed681c54669c87759f02.json
astarte-device-error/: CHANGELOG.md  Cargo.toml  README.md
astarte-device-sdk-derive/: CHANGELOG.md  Cargo.lock.license  Cargo.toml
astarte-device-sdk-derive/src/: case.rs  event.rs  lib.rs
astarte-device-sdk-mock/: CHANGELOG.md  Cargo.toml  README.md
astarte-device-tls/: CHANGELOG.md  Cargo.toml
astarte-device-tls/src/: insecure.rs  lib.rs
astarte-interfaces/: CHANGELOG.md  Cargo.toml  README.md
astarte-interfaces/src/: error.rs  lib.rs  schema.rs
astarte-interfaces/src/interface/: mod.rs  name.rs  properties.rs  reference.rs  validation.rs  version.rs
astarte-interfaces/src/interface/datastream/: individual.rs  mod.rs  object.rs
astarte-interfaces/src/mapping/: collection.rs  endpoint.rs  mod.rs  path.rs  properties.rs
astarte-interfaces/src/mapping/datastream/: individual.rs  mod.rs  object.rs
astarte-test-utils/: CHANGELOG.md  Cargo.toml
astarte-test-utils/snapshots/: astarte_test_utils__tests__hexdump.snap  astarte_test_utils__tests__use_macro.snap
astarte-test-utils/src/: lib.rs
benches/: benchmark.rs
docs/: connect-to-the-astarte-message-hub.md  get-started.md  os-requirements.md
e2e-test/: Cargo.toml
examples/: README.md  database.rs  datatypes.rs  deviceproperties.rs  e2etest.rs  object.rs  registration.rs  runtime_interfaces.rs  simple.rs
migrations/: 0001_init.sql  0002_unset_property.sql  0003_session.sql  0004_sent_properties.sql  20230622092054_init.sql  20231023091345_add_retention_table.sql  20240513131630_retention.sql
python_scripts/: code_coverage.py
queries/: clear.sql  clear_retention.sql  delete_first_retention.sql  delete_interface.sql  delete_prop.sql  delete_retention_by_id.sql  device_props.sql  interface_props.sql  is_empty_retention.sql  load_all_props.sql  load_all_retentions.sql  load_first_retention.sql  load_prop.sql  server_props.sql  store_prop.sql  store_retention.sql
scripts/: check-for-publish.sh  convert-get-started.sh  coverage.sh  create-release.sh  docs-rs.sh  e2e.sh  register-device.sh  test-offline-run.sh  wait-for-astarte.sh
snapshots/: astarte_device_sdk__properties__tests__should_encode_props.snap  astarte_device_sdk__transport__mqtt__payload__test__bson_serialization.snap  astarte_device_sdk__transport__mqtt__payload__test__serialize_object.snap  astarte_device_sdk__types__test__tesat_astarte_data_to_typ_error.snap
src/: aggregate.rs  builder.rs  client.rs  connection.rs  crypto.rs  database.rs  error.rs  event.rs  interface.rs  interfaces.rs  introspection.rs  lib.rs  main.rs  mock.rs  mqtt.rs  mqtt_client.rs  options.rs  pairing.rs  payload.rs  prelude.rs  properties.rs  registration.rs  retry.rs  shared.rs  state.rs  topic.rs  types.rs  utils.rs  validate.rs
tests/: certificate.pem  certificate.pem.license  priv-key.der
(+243 files in other folders)
