# This file is part of Astarte.
#
# Copyright 2022 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-device-sdk"
version = { workspace = true }
categories = ["embedded", "api-bindings"]
documentation = "https://docs.rs/astarte-device-sdk"
edition = { workspace = true }
homepage = { workspace = true }
# Needed to include the `.sqlx/` hidden folder
include = [
  "!*.sqlite*",
  "/.sqlx",
  "/CHANGELOG.md",
  "/LICENSE",
  "/LICENSES",
  "/README.md",
  "/docs",
  "/examples",
  "/migrations",
  "/queries",
  "/src",
]
keywords = ["sdk", "iot", "astarte"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "A library that provides communication and pairing primitives to an Astarte Cluster"

[workspace]
resolver = "2"
members = [
  "astarte-device-sdk-derive",
  "astarte-device-sdk-mock",
  "e2e-test",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.8.6"
edition = "2021"
homepage = "https://astarte.cloud/"
license = "Apache-2.0"
repository = "https://github.com/astarte-platform/astarte-device-sdk-rust"
rust-version = "1.72"

[dependencies]
astarte-device-sdk-derive = { workspace = true, optional = true }
astarte-message-hub-proto = { workspace = true, optional = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bson = { workspace = true, features = ["chrono-0_4"] }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ecdsa = { workspace = true, features = ["sha2"] }
flate2 = { workspace = true }
flume = { workspace = true, features = ["async"] }
futures = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true, optional = true }
p384 = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rumqttc = { workspace = true, features = ["use-rustls"] }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["parking_lot", "macros"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v5", "v4"] }
x509-cert = { workspace = true, features = ["builder"] }

# Transitive dependency
ahash = { workspace = true }
time = { workspace = true }

[dev-dependencies]
astarte-device-sdk-derive = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["interface-strict"]
derive = ["dep:astarte-device-sdk-derive"]
openssl = ["dep:openssl"]
message-hub = ["dep:astarte-message-hub-proto"]
interface-doc = []
interface-strict = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg=docsrs"]

[workspace.dependencies]
astarte-device-sdk = { path = "./", version = "=0.8.6" }
astarte-device-sdk-derive = { version = "=0.8.6", path = "./astarte-device-sdk-derive" }
astarte-message-hub-proto = "0.6.2"
async-trait = "0.1.50"
base64 = "0.22.0"
bson = "2.7.0"
bytes = "1.5.0"
chrono = "0.4.20"
color-eyre = "0.6.3"
ecdsa = "0.16.7"
env_logger = "0.11.0"
eyre = "0.6.12"
flate2 = "1.0.0"
flume = "0.11.0"
futures = "0.3.0"
http = "1.0.0"
itertools = "0.11.0"
log = "0.4.17"
mockall = "0.12.1"
mockito = "1.4.0"
once_cell = "1.18.0"
openssl = "0.10.46"
p384 = "0.13.0"
proc-macro2 = "1.0.75"
quote = "1.0.35"
rand_core = "0.6.4"
reqwest = "0.12.0"
rumqttc = "0.24.0"
rustls = "0.22.2"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.0"
serde = "1.0.184"
serde_json = "1.0.85"
# The version 0.7.4 is incompatible with MSRV 1.72
sqlx = "0.7.0, < 0.7.4"
structopt = "0.3.26"
syn = "2.0.52"
sync_wrapper = "1.0.0"
tempfile = "3.6.0"
thiserror = "1.0.35"
tokio = "1.36.0"
tokio-stream = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.0"
url = "2.2.2"
uuid = "1.1.2"
x509-cert = "0.2.2"

# Transitive dependencies
ahash = "0.8.8"
time = "0.3.35"

[[example]]
name = "msghub_client"
path = "examples/message_hub_client/main.rs"
required-features = ["message-hub", "derive"]

[[example]]
name = "object_datastream"
path = "examples/object_datastream/main.rs"
required-features = ["derive"]
