# This file is part of Astarte.
#
# Copyright 2022 - 2025 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "astarte-device-sdk"
version = { workspace = true }
categories = ["embedded", "api-bindings"]
documentation = "https://docs.rs/astarte-device-sdk"
edition = { workspace = true }
homepage = { workspace = true }
include = [
  "!*.sqlite*",
  "/CHANGELOG.md",
  "/LICENSE",
  "/LICENSES",
  "/README.md",
  "/docs",
  "/examples",
  "/migrations",
  "/queries",
  "/src",
]
keywords = ["sdk", "iot", "astarte"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "A library that provides communication and pairing primitives to an Astarte Cluster"

[workspace]
resolver = "2"
members = [
  "astarte-device-sdk-derive",
  "astarte-device-sdk-mock",
  "astarte-interfaces",
  "e2e-test",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.10.2"
edition = "2021"
homepage = "https://astarte.cloud/"
license = "Apache-2.0"
repository = "https://github.com/astarte-platform/astarte-device-sdk-rust"
rust-version = "1.78.0"

[dependencies]
astarte-device-sdk-derive = { workspace = true, optional = true }
astarte-interfaces = { workspace = true }
astarte-message-hub-proto = { workspace = true, optional = true }
base64 = { workspace = true }
bson = { workspace = true, features = ["chrono-0_4"] }
bytes = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
flate2 = { workspace = true }
flume = { workspace = true, features = ["async"] }
futures = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
# Use aws-lc-rs to support all PrivateKey types
rcgen = { workspace = true, default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
reqwest = { workspace = true, default-features = false }
rumqttc = { workspace = true, features = ["use-rustls"] }
rusqlite = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
# Required by rumqttc even if not used
rustls-webpki = { workspace = true, default-features = false, features = ["std", "aws-lc-rs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "parking_lot", "macros", "fs"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v5"] }
webpki-roots = { workspace = true, optional = true }

[target.'cfg(macos)'.dependencies]
reqwest = { workspace = true, features = ["macos-system-configuration"] }

[dev-dependencies]
astarte-device-sdk-derive = { workspace = true }
astarte-message-hub-proto = { workspace = true }
astarte-message-hub-proto-mock = { workspace = true }
async-trait = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
pretty_assertions = { workspace = true }
rcgen = { workspace = true, features = ["pem", "x509-parser"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Transitive dependencies
litemap = { workspace = true }
zerofrom = { workspace = true }

[features]
default = ["interface-strict", "sqlite-trace", "tokio-multi-thread"]
derive = ["dep:astarte-device-sdk-derive"]
interface-doc = []
interface-strict = []
message-hub = ["dep:astarte-message-hub-proto"]
sqlite-trace = ["rusqlite/trace"]
tokio-multi-thread = ["tokio/rt-multi-thread"]
webpki = ["dep:webpki-roots"]

[lints.rust]
# config used for coverage generation
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(__coverage)'] }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg=docsrs"]

[workspace.dependencies]
astarte-device-sdk = { path = "./", version = "=0.10.2" }
astarte-device-sdk-derive = { version = "=0.10.2", path = "./astarte-device-sdk-derive" }
astarte-interfaces = { path = "./astarte-interfaces", version = "=0.1.1" }
astarte-message-hub-proto = "0.8.1"
astarte-message-hub-proto-mock = "0.8.1"
async-channel = "2.0.0"
async-trait = "0.1.67"
base64 = "0.22.0"
bson = "2.7.0"
bytes = "1.5.0"
cfg-if = "1.0.0"
chrono = "0.4.20"
clap = "4.5.32"
color-eyre = "0.6.3"
eyre = "0.6.12"
flate2 = "1.0.0"
flume = "0.11.0"
futures = "0.3.0"
http = "1.0.0"
itertools = "0.14.0"
mockall = "0.13.1"
mockito = "1.4.0"
openssl = "0.10.46"
phoenix-chan = "0.4.2"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.83"
quote = "1.0.35"
rcgen = { version = "0.13.1", default-features = false }
regex = "1.11.0"
reqwest = { version = "0.12.9", default-features = false, features = ["http2", "charset", "json", "rustls-tls-native-roots-no-provider"] }
rumqttc = { package = "rumqttc-dev-patched", version = "0.24.6-ack-notify" }
# Error with bindgen and rust <1.82
# See: https://github.com/rusqlite/rusqlite/issues/1631
rusqlite = "=0.32.1"
rustls = "0.23.4"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.5.1"
rustls-webpki = { version = "0.103.0", default-features = false }
serde = "1.0.184"
serde_json = "1.0.85"
syn = "2.0.87"
sync_wrapper = "1.0.0"
tempfile = "3.6.0"
thiserror = "2.0.8"
tokio = "1.36.0"
tokio-stream = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.0"
url = "2.4.0"
uuid = "1.1.2"
webpki-roots = "1.0.0"

# Transitive dependencies
litemap = "=0.7.4"
zerofrom = "=0.1.5"

[[example]]
name = "msghub_client"
path = "examples/message_hub_client/main.rs"
required-features = ["message-hub", "derive"]

[[example]]
name = "object_datastream"
path = "examples/object_datastream/main.rs"
required-features = ["derive"]

[[example]]
name = "retention"
path = "examples/retention/main.rs"
required-features = ["derive"]
