# This file is part of Astarte.
#
# Copyright 2022-2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "3"
members = [
  "astarte-device-sdk-derive",
  "astarte-device-sdk-mock",
  "e2e-test",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.11.3"
edition = "2024"
homepage = "https://astarte.cloud/"
license = "Apache-2.0"
repository = "https://github.com/astarte-platform/astarte-device-sdk-rust"
rust-version = "1.88"

[package]
name = "astarte-device-sdk"
version.workspace = true
categories = ["embedded", "api-bindings"]
documentation = "https://docs.rs/astarte-device-sdk"
edition.workspace = true
homepage.workspace = true
include = [
  "!*.sqlite*",
  "/CHANGELOG.md",
  "/LICENSE",
  "/LICENSES",
  "/README.md",
  "/docs",
  "/examples",
  "/migrations",
  "/queries",
  "/src",
]
keywords = ["sdk", "iot", "astarte"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "A library that provides communication and pairing primitives to an Astarte Cluster"

[features]
default = ["interface-strict", "sqlite-trace"]
# Enable and exports the derive macros
derive = ["dep:astarte-device-sdk-derive"]
# Deprecated: Add the documentation and description to the interfaces
interface-doc = []
# Deprecated: Add stricter checks to the interfaces
interface-strict = []
# gRPC connection through the Astarte MessageHub
message-hub = ["dep:astarte-message-hub-proto"]
# Logs the SQLite queries and features
sqlite-trace = ["rusqlite/trace"]
# Uses the webpki-roots the Mozilla CA bundle for TLS
webpki = ["dep:webpki-roots"]
# Enable logging of security events onto a custom tracing target
security-events = []
# Compiles and uses the vendored version of the C dependencies
vendored = ["rusqlite/bundled"]
# Recreates the C bindings at buildtime, requires cmake, clang, and  bindgen-cli
bindgen = ["rusqlite/buildtime_bindgen", "dep:aws-lc-rs", "aws-lc-rs/bindgen"]
# Feature to make it easier to cross compile
cross = ["vendored", "bindgen"]

[[example]]
name = "msghub_client"
path = "examples/message_hub_client/main.rs"
required-features = ["message-hub", "derive"]

[[example]]
name = "object_datastream"
path = "examples/object_datastream/main.rs"
required-features = ["derive"]

[[example]]
name = "retention"
path = "examples/retention/main.rs"
required-features = ["derive"]

[dependencies]
astarte-device-sdk-derive = { workspace = true, optional = true }
astarte-interfaces = { workspace = true }
astarte-message-hub-proto = { workspace = true, optional = true }
async-channel.workspace = true
base64 = { workspace = true }
bson = { workspace = true, features = ["chrono-0_4", "serde"] }
bytes = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
flate2.workspace = true
futures = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true, features = ["sys_rng"] }
# Use aws-lc-rs to support all PrivateKey types
rcgen = { workspace = true, default-features = false, features = ["pem", "crypto", "aws_lc_rs"] }
reqwest = { workspace = true, default-features = false, features = ["charset", "json", "http2", "system-proxy", "rustls-no-provider"] }
rumqttc = { workspace = true, features = ["use-rustls"] }
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
# Required by rumqttc even if not used
rustls-webpki = { workspace = true, default-features = false, features = ["std", "aws-lc-rs"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sync_wrapper.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "parking_lot", "macros", "fs"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v5"] }
webpki-roots = { workspace = true, optional = true }
x509-parser = { workspace = true, features = ["aws-lc-rs"] }

# C dependencies, used to enable bindgen and vendoring
aws-lc-rs = { workspace = true, optional = true }
rusqlite.workspace = true

[dev-dependencies]
astarte-device-sdk-derive = { workspace = true }
astarte-message-hub-proto = { workspace = true }
astarte-message-hub-proto-mock = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
eyre = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
pretty_assertions = { workspace = true }
rcgen = { workspace = true, features = ["pem", "x509-parser"] }
rustls-platform-verifier.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "signal", "test-util"] }
tokio-stream = { workspace = true, features = ["net"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(__coverage)',
  'cfg(astarte_device_sdk_docsrs)',
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=astarte_device_sdk_docsrs"]

[workspace.dependencies]
astarte-device-sdk = { path = "./", version = "=0.11.3" }
astarte-device-sdk-derive = { version = "=0.11.3", path = "./astarte-device-sdk-derive" }
astarte-interfaces = "0.1.1"
astarte-message-hub-proto = "0.10.1"
astarte-message-hub-proto-mock = "0.10.1"
async-channel = "2.0.0"
async-trait = "0.1.67"
aws-lc-rs = "1.12.0"
base64 = "0.22.1"
bson = "3.0.0"
bytes = "1.7.1"
cfg-if = "1.0.0"
chrono = "0.4.34"
clap = "4.5.32"
color-eyre = "0.6.3"
eyre = "0.6.12"
flate2 = "1.0.0"
futures = "0.3.0"
itertools = "0.14.0"
mockall = "0.14.0"
mockito = "1.4.0"
phoenix-chan = "0.4.2"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.91"
quote = "1.0.35"
rand = "0.10.0"
rcgen = { version = "0.14.0", default-features = false }
regex = "1.11.0"
reqwest = { version = "0.13.0", default-features = false }
rumqttc = { package = "rumqttc-dev-patched", version = "0.24.9-ack-notify" }
# for last diesel release compatibility
rusqlite = ">=0.35.0"
rustls = "0.23.27"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.0"
rustls-webpki = { version = "0.103.2", default-features = false }
serde = "1.0.184"
serde_json = "1.0.85"
syn = "2.0.89"
sync_wrapper = "1.0.2"
tempfile = "3.6.0"
thiserror = "2.0.12"
tokio = "1.39.1"
tokio-stream = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.0"
url = "2.4.0"
uuid = "1.1.2"
webpki-roots = "1.0.0"
x509-parser = "0.18.0"
