# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-device-sdk-derive"
version = { workspace = true }
categories = ["embedded", "api-bindings", "development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/astarte-device-sdk-derive"
edition = { workspace = true }
exclude = { workspace = true }
homepage = { workspace = true }
keywords = ["sdk", "iot", "astarte", "derive"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Derive macros implementation used by Astarte Device SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
