# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-device-sdk-derive"
version = "0.5.2"
documentation = "https://docs.rs/astarte-device-sdk-derive"
edition = "2021"
homepage = "https://astarte.cloud/"
keywords = ["sdk", "iot", "astarte", "derive"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/astarte-platform/astarte-device-sdk-rust"
rust-version = "1.59.0"
description = "Derive macros implementation used by Astarte Device SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
syn = { version = "1.0.0", features = ["extra-traits"] }
