# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-device-sdk-derive"
version.workspace = true
documentation = "https://docs.rs/astarte-device-sdk-derive"
edition.workspace = true
homepage.workspace = true
keywords = ["sdk", "iot", "astarte", "derive"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Derive macros implementation used by Astarte Device SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
syn = { version = "1.0.0", features = ["full"] }
