# This file is part of Astarte.
#
# Copyright 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "astarte-device-tls"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["cryptography"]
description = "TLS configuration for the Astarte device"

[features]
default = ["platform-verifier"]
# Preferred, use the platform certificate and TLS verifier.
platform-verifier = ["dep:rustls-platform-verifier"]
# Compiled in copy of the root certificate trusted by Mozilla.
webpki-roots = ["dep:webpki-roots"]

[dependencies]
aws-lc-rs.workspace = true
cfg-if.workspace = true
rustls-native-certs.workspace = true
rustls.workspace = true
tracing.workspace = true
rustls-platform-verifier = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
